--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -283,6 +283,7 @@
 /etc/mrt/2680151910955e2018a3285d0df781b9 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/1edba87119ab638ec1e0882ef709f39e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/3654281289ae7d498fa5b696e6dd2802 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/f50debe0d7d41cda2d3109c786437870 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b88c43b7f3f116738b8f5f5ca9430c66 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/210eccf712ddf541e8460801abf33509 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/799d36dfb7ced662ba24bfa4c152cb13 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
