Configured named.conf.local

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -78,6 +78,8 @@
 /etc/postfix/sasl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/tmpfiles.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc0.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/dpkg.cfg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/origins IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
