Zones fixed and DNS working

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -145,6 +145,7 @@
 /etc/mrt/272b1c7b8df91e7794262681808570f2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/84c9950b3b156eab752ee2cf39013fa1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/59ebbcab83fb6fa726f6b70fde74691e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/b5ed4afc87e2927eb9e46bc0253cc248 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/cab05c7cfd52d08659a0758e555987ca IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/ffe5d8f27b13218c224d4bbfe96fe9cf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b0f45302bb379a7523fc78d06a691aab IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
