--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -46,6 +46,13 @@
 /etc/apt/trusted.gpg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/apt.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/preferences.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/conf-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/sites-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/mods-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/conf-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/sites-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager/release-upgrades.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -669,6 +676,7 @@
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.daily IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rcS.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/udev IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
