Default page welcome

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -85,6 +85,13 @@
 /etc/postfix/sasl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/tmpfiles.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc0.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/cli IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/cli/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/apache2/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/7.4/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
