Authentication for /private added

--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -12,6 +12,13 @@
 	DocumentRoot /var/www/www1/public_html
 	ServerName www1.seppe-lenaerts.sb.uclllabs.be
 
+	<Directory "/var/www/www1/public_html/private">
+		AuthType Basic
+		AuthName "Password Protected Area"
+		AuthUserFile /etc/apache2/sites-available/.htpasswd
+		Require valid-user
+	</Directory>
+
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
