--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -23,6 +23,8 @@
 /etc/ssh IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/sshd_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssh/ssh_config.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dconf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dconf/db IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/nagios-plugins IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/nagios-plugins/config IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/network IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -58,6 +60,8 @@
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl/Net IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/pm/sleep.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/modprobe.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc4.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/terminfo IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -92,6 +96,14 @@
 /etc/php/7.4/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/7.4/apache2/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/7.4/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority/50-local.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority/10-vendor.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority/20-org.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority/30-site.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/polkit-1/localauthority/90-mandatory.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -138,6 +150,7 @@
 /etc/apparmor.d/disable IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/insserv.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ld.so.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/PackageKit IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/autostart IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -265,6 +278,7 @@
 /etc/mrt/af90d9f430f262ec084770e812548e3f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5b11536290f060d1551009aca9935d7e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b2ef252ae3b6b13c20daa31ae1caa03e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/aae76cdcaaf1501d9702cc80374f282e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/a283ab0233f64f3429fbf98f0d2f8fd2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/a9ae62f0050e1bd057279363e64fcaa4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/62965c1303b75a7e81ac6b9a1822577f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -673,6 +687,7 @@
 /etc/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/network IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/user/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/sysinit.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/socket.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
