Supersecure vhost and certificate

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -83,6 +83,22 @@
 /etc/sysctl.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc3.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/keys IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live/secure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/csr IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/pre IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive/secure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/4a4a725050972f361e5ce9dca871c5b2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/postfix IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/postfix/postfix-files.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/postfix/dynamicmaps.cf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
