Supersecure HSTS header fixed

--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -1,4 +1,5 @@
-<VirtualHost *:80>
+<IfModule mod_ssl.c>
+<VirtualHost *:443>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -11,6 +12,7 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/supersecure/public_html
 	ServerName supersecure.seppe-lenaerts.sb.uclllabs.be
+	Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains;"
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
@@ -31,5 +33,10 @@ RewriteEngine on
 RewriteCond %{SERVER_NAME} =supersecure.seppe-lenaerts.sb.uclllabs.be
 RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
+</IfModule>
 
+<VirtualHost *:80>
+	ServerName supersecure.seppe-lenaerts.sb.uclllabs.be
+	Redirect permanent / https://supersecure.seppe-lenaerts.sb.uclllabs.be
+</VirtualHost>
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
