--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -86,6 +86,7 @@
 /etc/letsencrypt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/keys IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/live IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live/supersecure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/live/secure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/csr IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -94,6 +95,7 @@
 /etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/archive IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive/supersecure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/archive/secure.seppe-lenaerts.sb.uclllabs.be IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -232,6 +234,7 @@
 /etc/mrt/91d9cc92de4e974bad55a7802fde454c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/3c9db3dc8ebcc9b028f1850080234d50 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/60fa07ace2bcdf627cd3fb681b87e2d9 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/84ef4f3494a2ae8b342e92f63ed81d10 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/e8a175447ce968f5f6c2e6c4ad770b8c IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/f24f2a62d3efcec74bb2c7ba7bda2a06 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/7f43db9f1131d3c3fcc0e42d33ac2ec3 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
