--- a/apache2/sites-available/supersecure-le-ssl.conf
+++ b/apache2/sites-available/supersecure-le-ssl.conf
@@ -12,7 +12,7 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/supersecure/public_html
 	ServerName supersecure.seppe-lenaerts.sb.uclllabs.be
-
+	Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains;"
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
@@ -41,3 +41,8 @@ SSLCertificateKeyFile /etc/letsencrypt/live/supersecure.seppe-lenaerts.sb.ucllla
 Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
+
+<VirtualHost *:80>
+        ServerName supersecure.seppe-lenaerts.sb.uclllabs.be
+        Redirect permanent / https://supersecure.seppe-lenaerts.sb.uclllabs.be
+</VirtualHost>
