--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -30,6 +30,9 @@
 /etc/network IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/network/if-up.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/network/if-down.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/mysql.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/alternatives IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/newt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/default IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -60,6 +63,7 @@
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/perl/Net IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/init IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm/sleep.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/modprobe.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -607,6 +611,7 @@
 /etc/mrt/48ff5e98bd14c80cb9edb6613e3756a9 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/6b4930ca42f90ca95f4fc71da5bc8155 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/bcbece6f9bfbf9cd1f58827a453ceb69 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/0d104c68b016461d8a335469f70d467b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4e883b6ac0e48b64e0bdc356c1153622 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/d39892b8888593ed20c617a265935874 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/de8ce94442c0d16bda60f0af608feff7 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -732,7 +737,9 @@
 /etc/systemd/system/multi-user.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/getty.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.workstation IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
