MySQL Configured correctly

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -303,6 +303,7 @@
 /etc/mrt/af90d9f430f262ec084770e812548e3f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5b11536290f060d1551009aca9935d7e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b2ef252ae3b6b13c20daa31ae1caa03e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/e4fad0693b78fbab6a791611cf3c7b96 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/aae76cdcaaf1501d9702cc80374f282e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/a283ab0233f64f3429fbf98f0d2f8fd2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/a9ae62f0050e1bd057279363e64fcaa4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
