Configured Belgium NTP Pool

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -131,6 +131,8 @@
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/dpkg.cfg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/origins IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/X11 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/X11/Xresources IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -736,6 +738,7 @@
 /etc/systemd/system/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/graphical.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/multi-user.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/system/network-pre.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/getty.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
