--- a/ntp.conf
+++ b/ntp.conf
@@ -18,10 +18,18 @@ filegen clockstats file clockstats type day enable
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
+
+server 0.be.pool.ntp.org
+server 1.be.pool.ntp.org
+server 2.be.pool.ntp.org
+server 3.be.pool.ntp.org
+
 pool 0.ubuntu.pool.ntp.org iburst
 pool 1.ubuntu.pool.ntp.org iburst
 pool 2.ubuntu.pool.ntp.org iburst
 pool 3.ubuntu.pool.ntp.org iburst
+
+
 
 # Use Ubuntu's ntp server as a fallback.
 pool ntp.ubuntu.com
