Configured ntp to not disallow unwanted visitors

--- a/ntp.conf
+++ b/ntp.conf
@@ -42,13 +42,17 @@ pool ntp.ubuntu.com
 # that might be intended to block requests from certain clients could also end
 # up blocking replies from your own upstream servers.
 
-# By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
-
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
 restrict ::1
+
+restrict default ignore
+restrict -6 default ignore
+
+restrict 193.191.177.6 nomodify notrap nopeer
+restrict 2001:6a8:2880:a021::6 nomodify notrap nopeer
+
+restrict 84.192.17.152 nomodify notrap nopeer
 
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
