--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -630,6 +630,7 @@
 /etc/mrt/565791d2fadb1e863b3404bac556ffb5 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/aa9104517ac0be6f55b1ab17adb70616 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/fcfdc30ff7abf3820b1863099610b52e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/b6b89019af2b59801066d300a7d9e0ff IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/bfb2e171ed4764fa5fd16e948ea3dbf2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/b10df04ce80a8722441ab889d8c0bbea IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/52fd7e194aa6cdd79bc8f509dd55b5df IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
