DNS Add Record script made

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -621,6 +621,7 @@
 /etc/mrt/bcbece6f9bfbf9cd1f58827a453ceb69 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/0d104c68b016461d8a335469f70d467b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4e883b6ac0e48b64e0bdc356c1153622 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/56708a94d490d9c12310a4fc4b920c52 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/d39892b8888593ed20c617a265935874 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/de8ce94442c0d16bda60f0af608feff7 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/ae2ed13fcafd4cc48d923696424f92d2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
