Script dns_add_zone first trial

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -127,6 +127,7 @@
 /etc/polkit-1/localauthority/30-site.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/polkit-1/localauthority/90-mandatory.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind/mrt-tests IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/dpkg.cfg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -533,6 +534,7 @@
 /etc/mrt/487520c4a7edc1820e0721d066b87525 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/de358e10ccf80104839b662e23b00161 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/fd82b8c0d0ea578f43d1d5aca18733e0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/02fa49d1dbd93064507a3ef815fa3937 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4b53fcd4f9815c21dc16617c297204b8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/1f70a5bf3a64d08f9712c136d09b549f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/235fd07a5db9c369edbdedfb2ec862c0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
